# CPP-video-manipulation-project

./: CMakeLists.txt  README.md
include/: video_processing.h
src/: main.cpp  video_processing.cpp
